<?xml version="1.0"?>
<package format="2">
  <name>rosjl</name>
  <version>0.0.1</version>
  <description>The Julia language wrapper, for C++ ROS</description>

  <maintainer email="stavrinosgeo@gmail.com">George Stavrinos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>

</package>

